--- a/form.html
+++ b/form.html
@@ -38,6 +38,7 @@
             <label for="">Email:</label>
             <input type="email">
         </p>
+        <input type="submit">
     </form>
  </div>   
     
