create branch feature-html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hackathon</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     
+    <form action="">
+            <h1 class="contacto">Contacto</h1>
+            
+            <p>
+                <input type="text" placeholder="Nombre">
+                <input type="text" placeholder="Apellido" >
+            </p>
+            <p>
+                <input type="email" placeholder="Email">
+                <input type="tel" placeholder="Teléfono"  minlength="7" max="9">
+            </p>
+            <p>
+                <textarea name="" id="" cols="48" rows="10" placeholder="Descripcion"></textarea>
+            </p>
+            <input type="submit">
+    </form>
+  
 </body>
 </html>
